--- a/data-preprocessing/parameter.env
+++ b/data-preprocessing/parameter.env
@@ -3,7 +3,7 @@
     INPUT_FILE=raw_data/pets_prepared.csv
 
     # Processed file path
-    PROCESSED_FILE=processed_data/processed_data.csv
+    PROCESSED_FILE=processed_data/processed_data.cs
 
     # Maximum depth for the model
     MAX_DEPTH=4
